    *pel-use-ivy* user-options are activated.
  - New: Add extra key bindings for the ivy key-map to allow
    *ivy-restrict-to-matches* and *ivy-avy* to be accessible when Emacs runs
    in terminal mode.
- Update: *Key Chords*:
  - New: command *pel-key-chord-describe* (bound to ``<f11> ? k M-K``)
    displays the state of key-chord/key-seq and the key bindings if
    key-chord-mode is active.
- Update: *Navigation*
  - New: New commands to navigate across URLs in the current buffer:
    - *pel-goto-next-url*, bound to ``<f6> C-n`` globally and to ``C-c C-n``
      when the goto-address-mode minor mode is active and point is over a URL,
    - *pel-goto-previous-url*, bound to ``<f6> C-p`` globally and to ``C-c C-p``
      when the goto-address-mode minor mode is active and point is over a URL.
  - New: ``M-g h`` and ``M-g M-h`` key sequences mapped to *pel-goto-symbol*,
    a command that uses imenu to extract all symbols from the buffer to
    provide an efficient way to jump to the definition of any symbol in the
    current buffer.
    - The command provides completion using the completion method selected by
      the *pel-initial-goto-symbol-completion-mode* which defaults to Ido.
      You can use the command *pel-goto-symbol-select-completion* to change
      the completion method used in the current Emacs session. The available
      completion methods are:
      - Ido,
      - Ido with flex matching,
      - Ivy.
  - New: Add support for imenu-anywhere, which provides the same functionality
    as pel-goto-symbol with the ability to target the symbols of *all*
    buffers:
    - Activated with the *pel-use-imenu-anywhere* that is set to identify the
      default completions method, one of: emacs-default, ido, ivy or helm.
    - The *pel-imenu-anywhere-select-completion* command (bound to ``M-g
      C-y``) can be used to change the completion method used in an Emacs
      editing session.